# unit

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/abi/: Cargo.toml
crates/abi/src/: header.rs  lib.rs  magic.rs
crates/api/: Cargo.toml  build.rs
crates/api/src/: auth.rs  config.rs  main.rs  server.rs
crates/api/src/service/: admin.rs  crossbar.rs  mod.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/cli/src/cmd/: deploy.rs  mod.rs
crates/cli/src/services/: admin.rs  mod.rs
crates/crossbar/: Cargo.toml
crates/crossbar-client/: Cargo.toml  build.rs
crates/crossbar-client/src/: lib.rs
crates/crossbar/src/: lib.rs
crates/framework/: Cargo.toml
crates/framework-meta/: Cargo.toml
crates/framework-meta/src/: lib.rs
crates/framework/src/: client.rs  data.rs  lib.rs  log.rs  vm_internals.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: bus.rs  config.rs  crossbar.rs  main.rs  runtime.rs  server.rs
crates/pubsub/: Cargo.toml
crates/pubsub/src/: lib.rs
crates/runtime-proto/: Cargo.toml
crates/runtime-proto/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: env.rs  err.rs  lib.rs  shared_config.rs  shell.rs
deployment/: docker-compose.yml
examples/hello-world/: Cargo.toml
examples/hello-world/client/: package.json  tsconfig.json
examples/hello-world/client/src/: index.ts
examples/hello-world/src/: main.rs
examples/push-crossbar/: Cargo.toml
examples/push-crossbar/src/: main.rs
proto/: admin.proto  crossbar.proto
