[package]
name = "unit-meta"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
unit-utils = { path = "../utils" }
unit-abi = { path = "../abi" }
syn = { version = "2.0.27", features = ["full"] }
quote = "1.0"
darling = "0.20.3"
proc-macro-error = "1.0"
proc-macro2 = "1.0.66"


