[package]
name = "unit"
version = "0.1.0"
edition = "2021"

[dependencies]
unit-meta = { path = "../framework-meta" }
unit-runtime-proto = { path = "../runtime-proto" }
tokio = { version = "=1.24.2", git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.24.2-fixed", features = ["full"] }
serde = { version = "1.0.189", features = ["derive"] }

